--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "node --watch app.js"
   },
   "dependencies": {
